--- a/gpio/userspace/Makefile
+++ b/gpio/userspace/Makefile
@@ -23,7 +23,7 @@ all: main.o
 
 .PHONY: install
 install: all
-	# Make the package structure and copy the binaries
+# Make the package structure and copy the binaries
 	mkdir -p $(INSTALL_DIR)/usr/local/bin
 	for dir in $(SUBDIRS); do \
 	  $(MAKE) -C $$dir install; \
@@ -32,26 +32,26 @@ install: all
 	
 .PHONY: deploy
 deploy: install	
-	# Make the control file
-	echo "Package: $(PKG_NAME)" > control
-	echo "Version: 1.0.$(PKG_NO)" >> control
-	echo "Architecture: all" >> control
-	echo "Maintainer: fudgebread" >> control
-	echo "Description: Basic ipk for rpi gpio." >> control
+# Make the control file
+	@echo "Package: $(PKG_NAME)" > control
+	@echo "Version: 1.0.$(PKG_NO)" >> control
+	@echo "Architecture: all" >> control
+	@echo "Maintainer: fudgebread" >> control
+	@echo "Description: Basic ipk for rpi gpio." >> control
 
-	# And the mandatory debian-binary file for ipks
-	echo "2.0" > debian-binary
+# And the mandatory debian-binary file for ipks
+	@echo "2.0" > debian-binary
 	
-	# Tar everything up
-	tar czf control.tar.gz control
-	tar czf data.tar.gz -C $(INSTALL_DIR) .
-	ar -r $(PKG_NAME)-$(PKG_NO).ipk debian-binary control.tar.gz data.tar.gz 
+# Tar everything up
+	@tar czf control.tar.gz control
+	@tar czf data.tar.gz -C $(INSTALL_DIR) .
+	@ar -r $(PKG_NAME)-$(PKG_NO).ipk debian-binary control.tar.gz data.tar.gz 
 	
-	# Housekeeping
-	rm control
-	rm debian-binary
-	rm *.gz
-	echo `expr $(PKG_NO) + 1` > $(TOP)/buildnum.txt
+# Housekeeping
+	@rm control
+	@rm debian-binary
+	@rm *.gz
+	@echo `expr $(PKG_NO) + 1` > $(TOP)/buildnum.txt
 	
 .PHONY: clean
 clean:
